# Plange

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  LICENSE.md  LICENSE.txt  README.md  about.php  clean.bat  clean.sh  contribute.php  footer.php  header.php  index.php  metas.php  page_template  plange.blend  plange.blend1  plange.png.backup  prepare_llvm.sh
source/: .gitignore  CMakeLists.txt  Plange.VC.opendb  Plange.sln  default.workspace  grammar.wsn  plange.cmake  plangeConfig.hpp.in  re-cmake.sh  syntax.yml
source/Examples/: class.pge  intToString.pge  intToString.txt  pdeIntegration.txt
source/LLVM - attempt to make a classy C# wrapper for the C API, which I gave up on because the C API is incomplete/: Argument.cs  ArrayType.cs  BasicBlock.cs  BinaryConstantExpr.cs  BinaryOperator.cs  BlockAddress.cs  Builder.cs  CallInst.cs  CompareConstantExpr.cs  CompositeType.cs  Constant.cs  ConstantAggregateZero.cs  ConstantArray.cs  ConstantDataArray.cs  ConstantDataSequential.cs  ConstantDataVector.cs  ConstantExpr.cs  ConstantFP.cs  ConstantInt.cs  ConstantPointerNull.cs  ConstantStruct.cs  ConstantVector.cs  Context.cs  ExtractElementConstantExpr.cs  FenceInst.cs  FloatingPointType.cs  Function.cs  FunctionType.cs  GetElementPtrConstantExpr.cs  GlobalObject.cs  GlobalObject.cs~RF87bf4df.TMP  GlobalValue.cs  IAddOnlyList.cs~RF9ee8eb6.TMP  IReadOnlyArray.cs  InlineAsm.cs  InsertElementConstantExpr.cs  InsertValueConsantExpr.cs  Instruction.cs  IntegerType.cs  LLVM.csproj  (+23 more)
source/LLVM - attempt to make a classy C# wrapper for the C API, which I gave up on because the C API is incomplete/Collections/: AddOnlyIterationListAbstraction.cs  AddOnlyListAbstraction.cs  ArrayAbstraction.cs  IAddOnlyList.cs  IArray.cs  ListAbstraction.cs  NoElementAccessListAbstraction.cs  ReadOnlyIterationListAbstraction.cs
source/LLVM - attempt to make a classy C# wrapper for the C API, which I gave up on because the C API is incomplete/Instructions/: AtomicCmpXchg.cs  AtomicRMW.cs  Compare.cs  ExtractElement.cs  GetElementPtr.cs  InsertElement.cs  InsertValue.cs  LandingPad.cs  ShuffleVector.cs  Store.cs  Switch.cs  Terminator.cs  Unary.cs
source/LLVM - attempt to make a classy C# wrapper for the C API, which I gave up on because the C API is incomplete/LLVMExperiments/: LLVMExperiments.csproj  Program.cs
source/LLVM - attempt to make a classy C# wrapper for the C API, which I gave up on because the C API is incomplete/Properties/: AssemblyInfo.cs
source/Plange/: Compiler.cs  Parser.cs  Plange.csproj  packages.config
source/Plange/Properties/: AssemblyInfo.cs
source/Plange/Runtime/: Field.cs  Method.cs  Object.cs  Property.cs  Type.cs
source/Plange/stdlib/: TsList.pge
source/cmake/Modules/: PrecompiledHeader.cmake  curl_and_unpack.cmake  depend.cmake  msvc_fetch_llvm.cmake  msvc_fetch_mpir.cmake  (+2 more)
source/collections/: CMakeLists.txt  coherent_map.hpp  coherent_queue.hpp  coherent_set.hpp  concurrent_auto_map.hpp  concurrent_forward_list.hpp  mover.hpp
source/grammar_gen/: CMakeLists.txt  main.cpp
source/mpl/: CMakeLists.txt  mpl__if.hpp  mpl_any.hpp  mpl_apply.hpp  mpl_apply_v.hpp  mpl_apply_values.hpp  mpl_bind.hpp  mpl_bool.hpp  mpl_choose_v.hpp  mpl_drop.hpp  mpl_drop_v.hpp  mpl_dummy.cpp  mpl_equals.hpp  mpl_filter.hpp  mpl_first.hpp  mpl_flatten.hpp  mpl_fold.hpp  mpl_fold_i.hpp  mpl_fold_v.hpp  mpl_fold_value.hpp  mpl_fold_vv.hpp  mpl_fold_vx.hpp  mpl_function_decomposition.hpp  mpl_functor.hpp  mpl_has_instance_member.hpp  mpl_has_move_assignment.hpp  mpl_has_type_member.hpp  mpl_head.hpp  mpl_indices.hpp  mpl_is_const.hpp  mpl_is_copyable.hpp  mpl_is_defined.hpp  mpl_is_invocable.hpp  mpl_is_invokable.hpp  mpl_is_movable.hpp  mpl_list.hpp  mpl_map.hpp  mpl_map_i.hpp  mpl_map_v.hpp  mpl_map_values.hpp  (+12 more)
source/parlex/: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac  debug  debug.sh  parlex.cbp  parlex.depend  parlex.layout  parlex.vcxproj  parlex.vcxproj.filters  todo_notes.txt
source/plc/: .gitignore  AddSubExp.cpp  AddSubExp.h  AddSubExp.hpp  Addition.cpp  Addition.h  AdditionExp.cpp  AdditionExp.h  AdditionExp.hpp  AllExp.cpp  AllExp.h  AllExp.hpp  AllocationExp.cpp  AllocationExp.h  AllocationExp.hpp  AndExp.cpp  AndExp.h  AndExp.hpp  ArrayExp.cpp  ArrayExp.h  ArrayExp.hpp  AsmFunctionExp.cpp  AsmFunctionExp.h  AsmFunctionExp.hpp  Assertion.cpp  Assertion.h  Assignment.cpp  Assignment.h  Assignment.hpp  BijectionExp.cpp  BijectionExp.h  BijectionExp.hpp  BinaryOp.cpp  BinaryOp.h  BinaryOpExp.cpp  BinaryOpExp.h  BinaryOpExp.hpp  BitAndExp.cpp  BitAndExp.h  BitOrExp.cpp  (+337 more)
source/python/: templating.py
source/python_tools/: cpp_binary_arithmetic_eval.template  generate_syntax_classes.py  wirth.py
source/runtime_cpp/: CMakeLists.txt
source/stdlib/: FindDeclarations.cpp  Makefile  Plange.Array._pg  Plange.Array.pgo  Plange.CStdLib.Generated._pg  Plange.CStdLib._pg  Plange.Exceptions._pg  Plange.Expressions._pg  Plange.ForwardList.pgo  Plange.Iterators._pg  Plange.List.pgo  Plange.Math.Algebra._pg  Plange.Math._pg  Plange.Meta.Expression.pgo  Plange.Meta._pg  Plange.Primitives._pg  Plange.Runtime._pg  Plange.String._pg  Plange.Synchronization._pg  Plange.Text._pg  Plange.TsArray._pg  Plange.TsArray.pgo  Plange.Type.pgo  Plange._pg  mathlib.txt  signallib.txt  stdiolib.txt  stdliblib.txt  stringlib.txt  structDeclaration.txt  timelib.txt
source/stdlib_cpp/: CMakeLists.txt  meta.hpp  print.hpp  stdlib.cpp  stdlib.hpp
source/utilities/: CMakeLists.txt  NatvisFile.natvis  auto_map_c.hpp  bits.hpp  concurrent_forward_list.hpp  covariant_invoke.hpp  dynamic_dispatch.hpp  erased.hpp  forward_list_c.hpp  graphviz_dot.hpp  logging.cpp  logging.hpp  one_shot.cpp  one_shot.hpp  perf_timer.cpp  perf_timer.hpp  pointer.hpp  tarjan.cpp  tarjan.hpp  thread_pool.cpp  thread_pool.hpp  utf.cpp  utf.hpp  utilities.vcxproj  utilities.vcxproj.filters  utils.cpp  utils.hpp  val.hpp  wait_flag.hpp
source/web/: about.html  build.py  contribute.html  index.html  strip.py
(+2110 files in other folders)
